--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -278,7 +278,7 @@ We account for control group substitution using a variety of econometric procedu
 
 The results for females show that the program increases the employment and incomes of participants as adults, their high school graduation, college graduation, and parental income. It reduces participant arrests (see Table~\ref{table:tescombined}). These results strengthen when we compare treatment with the alternative of staying exclusively at home.
 
-The results for males are different. Treated subjects reported lower drug use and blood pressure. There are also effects on earnings and education. The results for employment, hypertension, blood pressure, and graduation from a 4-year college are strengthened when comparing the treatment group to those subjects who attend alternative preschools.
+The results for males are different. Treated subjects reported lower drug use and blood pressure. There are also effects on labor income and education. The results for employment, hypertension, blood pressure, and graduation from a 4-year college are strengthened when comparing the treatment group to those subjects who attend alternative preschools.
 
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
@@ -335,11 +335,11 @@ Note: Panel (a) percentage of outcomes displaying a positive treatment effect, c
 
 \section{Predicting and Monetizing Life-cycle Costs and Benefits}\label{section:cbamethodology}
 
-A central focus of this paper is on summarizing the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. This requires predicting the out-of-sample benefits of the program over the life cycle after the measurement phase of the study ends. This is a fundamental problem in empirical social science that has been addressed in the literature in multiple ways.\footnote{See, e.g., \cite{Heckman_Lochner_ea_2006_HEE}. \citet{Heckman_Moon_etal_2010_RateofReturn} use a variety of methods to project future earnings in the Perry study. The various methods are in general agreement. They fit a variety of panel data earnings dynamics models and project future earnings with them.} This section explains our strategy for using multiple data sources to extrapolate the life-cycle costs and benefits of education, labor income, transfer income, crime, and health. Our approach is motivated by the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that the effect of treatment on outcomes operates through its effects of inputs in a stable production function rather than through shifts in the production function.
+A central focus of this paper is on summarizing the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. This requires predicting the out-of-sample benefits of the program over the life cycle after the measurement phase of the study ends. This is a fundamental problem in empirical social science that has been addressed in the literature in multiple ways.\footnote{See, e.g., \cite{Heckman_Lochner_ea_2006_HEE}. \citet{Heckman_Moon_etal_2010_RateofReturn} use a variety of methods to project future labor income in the Perry study. The various methods are in general agreement. They fit a variety of panel data labor income dynamics models and project future labor income with them.} This section explains our strategy for using multiple data sources to extrapolate the life-cycle costs and benefits of education, labor income, transfer income, crime, and health. Our approach is motivated by the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that the effect of treatment on outcomes operates through its effects of inputs in a stable production function rather than through shifts in the production function.
 
-To construct cost-benefit estimates we (i) \textit{interpolate} components not observed due to intermittent data collection; and (ii) \textit{extrapolate} (predict) components not observed because the follow-ups stop when the subjects were in their mid-30s. We use multiple sources of non-experimental data representative on the national or state level to construct these interpolations and extrapolations. Table~\ref{table:sources} presents the components for which we conduct these exercises and the data sources we use.
+To construct cost-benefit estimates we (i) \textit{interpolate} components not observed due to intermittent data collection; and (ii) \textit{extrapolate} (predict) components not observed because the follow-ups stop when the subjects were in their mid-30s. We use multiple sources of non-experimental data representative on the national or state level to construct these interpolations and extrapolations. Table~\ref{table:sources} presents the components for which we conduct these exercises and the data sources we use. We use labor income as running example for illustration purposes, but our methodology is the same for predicting the rest of the outcomes unless otherwise noted.
 
-\subsection{Using Auxiliary Samples to Predict Out of Sample Earnings}\label{sec:necrosis}
+\subsection{Using Auxiliary Samples to Predict Out of Sample}\label{sec:necrosis}
 
 We have data on control- and treatment-group individuals through age $t^{\ast}$. We lack information on participant outcomes afterward. Yet, post-$t^{\ast}$ outcomes are required to construct counterfactual life-cycle profiles. The goal is to find counterparts to both treatment and control individuals in the auxiliary data on whom we have post-$t^{\ast}$ data.\footnote{An alternative approach to predict life-cycle income is to follow \citet{Mincer_1974_schooling}, who claims that labor income around $t^*$ is a good measure of lifetime income. We show that a discount rate of 2\% is necessary to equate a Mincer-type prediction to our life-cycle prediction in Appendix~\ref{app:mincer}.}
 
@@ -421,7 +421,7 @@ We estimate first order Markov relationships for labor income, parental income, 
 \bm{X}^d_{k,t} = \gamma^d_{k,t} (\bm{X}^d_{t-1}, \bm{B}, \eta^d_{k,t}), \quad d \in \{0,1\}, \ k \in \mathcal{K}_t, t \in \{0,\dots,T\}
 \end{equation}
 
-\noindent where $\eta^d_{k,t}$ is an unobserved determinant of $\bm{X}^d_{k,t}$. The $\bm{X}^d_{k,t}$ can be caused by treatment, as can $\bm{X}^d_{t-1}$. Examples of $\bm{X}^d_t$ in our data are education, IQ, health, work experience, and participation in crime. All are potential determinants of earnings.
+\noindent where $\eta^d_{k,t}$ is an unobserved determinant of $\bm{X}^d_{k,t}$. The $\bm{X}^d_{k,t}$ can be caused by treatment, as can $\bm{X}^d_{t-1}$. Examples of $\bm{X}^d_t$ in our data are education, IQ, health, work experience, and participation in crime. All are potential determinants of labor income.
 
 We assume \emph{structural invariance} of \eqref{eq:trenchfoot} and \eqref{eq:frostbite}.\footnote{See, e.g., \citet{Frisch_1938_autonomy}, \citet{Haavelmo_1943_Econometrica,Haavelmo_1944_Econometrica}, \citet{Hurwicz_1962_structural}, and \citet{Heckman_Pinto_2015_EconometTheory}.} This means that however the arguments of \eqref{eq:trenchfoot} and \eqref{eq:frostbite} are determined, for the same numerical values of $(\bm{X}^d_t, \bm{B}, \varepsilon^d_t)$ and $(\bm{X}^d_{t-1}, \bm{B}, \eta^d_{j,t})$, we obtain the same values of $\bm{Y}^d_{j,t}$.\footnote{Frisch called this notion ``autonomy.'' Much later work in statistics captures structural invariance as one aspect of ``SUTVA.'' See \citet{Holland_1986_JASA} and \citet{Heckman_2008_ISR}.} This is a fundamental property of invariant economic relationships used by economists since the time of \citet{Frisch_1938_autonomy}.
 
@@ -463,7 +463,7 @@ In particular, we assume that the support of $\mathcal{B}_0$ is included in the 
 \end{assumption}
 \doublespacing
 
-i.e., treatment effects operate through inputs and not shifts in the input-output functions. This allows us to use post-$t^*$ relationships fit on the auxiliary samples to forecast post-$t^*$ outcomes of treatment group members. Evidence for the validity of this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}. In Appendix~\ref{app:invariance}, we test and do not reject this assumption for earnings and transfer income using the factor structure control function approach developed in \citet{Heckman_Pinto_etal_2013_PerryFactor}. \textbf{[JJH: Jorge, Heckman et al. (2013) do not test this. There is still a ``D'' in the treatment equation. Do you (or Attanasio) test if $E(Y_1-Y_0 | X, \bm{B} \in \mathcal{B}) = \alpha + \gamma^{\prime} E (X_1-X_0)$? I.e., there is no dummy variable left after putting in treatment effects? We need to test this. (Also in Perry I suppose.)] [JLG: Yes, all tests included. Let me know if you want to add tests for Perry in our paper. We can include them no problem.]}
+i.e., treatment effects operate through inputs and not shifts in the input-output functions. This allows us to use post-$t^*$ relationships fit on the auxiliary samples to forecast post-$t^*$ outcomes of treatment group members. Evidence for the validity of this assumption in the context of early childhood programs is presented in \citet{Heckman_Pinto_etal_2013_PerryFactor} and \citet{Attanasio-etal_2015_NBER_Estimating-Production}. In Appendix~\ref{app:invariance}, we test and do not reject this assumption for parental income, labor income, and transfer income using the factor structure control function approach developed in \citet{Heckman_Pinto_etal_2013_PerryFactor}.
 
 We make a corresponding assumption for the equation governing the evolution of inputs:
 
@@ -499,7 +499,7 @@ Our predictions are based on matching individuals in the non-experimental sample
 
 A simple example is the following: in the treatment sample, the program causes more education. Suppose we match based on education to create a treatment synthetic cohort. But doing so, we may match individuals in the non-experimental sample who are highly educated because they come from better backgrounds and are more motivated compared to those in the experiment who are induced to be educated by the experiment. Omitted ability could bias predictions based on the matched samples.
 
-We discuss these issue and present a comprehensive set of tests of Assumption~\ref{ass:eczema} and Assumption~\ref{ass:corns} in Appendix~\ref{app:methodology}. Here we present a brief discussion of the methodology for doing so and illustrate it presenting tests for Assumption~\ref{ass:eczema}. 
+We discuss these issue and present a comprehensive set of tests of Assumption~\ref{ass:eczema} and Assumption~\ref{ass:corns} in Appendix~\ref{appendix:methodology}. Here we present a brief discussion of the methodology for doing so and illustrate it presenting tests for Assumption~\ref{ass:eczema}. 
 
 A potential problem is endogeneity (e.g., mean dependence between schooling years and unobserved skills). Unless the bias in the treatment and control groups are exactly the same, endogeneity would bias our predictions. If predictions are linear, a sufficient condition to obtain unbiased predictions is $\mathbb{E} \left[ \bm{\varepsilon}_{j,t}^0 | \bm{X}_{t}^d, \bm{B} \right] = \mathbb{E} \left[ \bm{\varepsilon}_{j,t}^1 | \bm{X}_{t}^d, \bm{B} \right]$. 
 
@@ -514,17 +514,47 @@ An alternative is to follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and obta
 
 With an auxiliary system of measures such that $\bm{M}_{t}^d $ has at least three elements, we are able to identify the vectors of coefficients characterizing these system: $\bm{\lambda}^d, \bm{\beta}^d$, as well as the respective covariance matrices $\Sigma_{\bm{\theta}_{t}^d}, \Sigma_{\bm{\upsilon}_{t}^d}$, and use the method in \citet{Bartlett_1938_Nature} to obtain an estimate of $\bm{\theta}_{t}^d$ \citep{Cunha_Heckman_ea_2005_oep,Cunha_Heckman_etal_2010_est_tech_cognoncog}. To put this in practice, we assume that $\bm{\theta}_{t}^d$ has two dimensions (one representing cognitive skill, $c$, and another representing non-cognitive skill, $n$). We assume dedicated measures for these skills at one time period. Put simply, we have two independent systems, one to measure $\bm{\theta}_{c}^d$ and one to measure $\bm{\theta}_{n}^d$, where $\bm{\theta}_{t}^d: = \left[ \bm{\theta}_{c}^d, \bm{\theta}_{n}^d \right]$. Further, we assume a common measurement system for the treatment and control groups (this is a sensible assumption given the small size of our sample). This assumption implies that $\bm{\lambda}^d, \bm{\beta}^d$, as well as $\bm{\Sigma}_{\bm{\theta}_{t}^d}, \bm{\Sigma}_{\bm{\upsilon}_{t}^d}$ are the same either when $d = 0$ or when $d = 1$.
 
-We use a set of measures from ages 2 to 8 to to obtain an estimate of $\bm{\theta}_{c}^d$ and a set of measures of somatization, hostility, depression, and global index of mental health to measure (all at age 21) to estimate $\bm{\theta}_{n}^d$.\footnote{For definitions and treatment effects on these variables see Appendix~\ref{appendix:results}.}
+We use a set of measures from ages 2 to 8 to to obtain an estimate of $\bm{\theta}_{c}^d$ and a set of measures of somatization, hostility, depression, and global index of mental health to measure (all at age 21) to estimate $\bm{\theta}_{n}^d$.\footnote{For definitions and treatment effects on these variables see Appendix~\ref{appendix:results}.} Figure~\ref{figure:factorsm} shows our estimates by treatment status.
 
-Given the conditions in \eqref{eq:msystemmain}, the estimated coefficients characterizing \eqref{eq:eqs} are unbiased, and therefore we can test Assumption~\ref{ass:eczema}. The tests consists of asking if the predictions variables we use are enough to summarize the treatment effects on the variables we predict, and therefore an indicator of treatment take-up becomes irrelevant when conditioning on these variables. We cannot reject the hypothesis that coefficient associated to random assignment to treatment is different from zero, once we condition on the variables we use to predict (see Table~\ref{table:tocome}). Using this same structure, we propose tests for Assumption~\eqref{ass:corns} in Appendix~\ref{app:methodology}. We do not find strong evidence against it.
+\begin{figure}[H]
+\centering
+\caption{Estimates of Cognitive ($\theta_{c}^d$) and Non-cognitive Skills ($\theta_{n}^d$)}\label{figure:factorsm}
+\begin{subfigure}[h]{0.5\textwidth}
+		\centering
+		\caption{Cognitive} \label{fig:c}
+		\includegraphics[width=\textwidth]{output/abccare_cfactor.eps}
+\end{subfigure}%
+\begin{subfigure}[h]{0.5\textwidth}
+	\centering
+	\caption{Non-cognitive} \label{fig:n}
+		\includegraphics[width=\textwidth]{output/abccare_nfactor.eps}
+\end{subfigure}
+\footnotesize \justify
+Note: Panels (a) displays a factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). Panel (b) displays an analogous exercise using measures measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. The mean difference between treatment and control is displayed below each panel, with standard error in parentheses. Standard errors are based on the bootstrap empirical distribution.
+\end{figure}
 
- \textbf{[JJH: Jorge, do we do this in comparison samples? Where?] [JLG: yes, noting the appendix after assertion now. And they effectively do not change in either the experimental or non-experimental samples.] [JJH: Give me updated figure.] [JLG: All tables with these tests in Appendix C.6.] [JJH: No shift in intercept actually? Seems too strong -- yet we need it.]  [JLG: Yes, we cannot reject differences once we account for all our prediction variables.] [JLG: I'm coordinating with Rodrigo for this. Not for him to do it, but for me to use the same measures that you use in the AER paper.]}
+Given the conditions in \eqref{eq:msystemmain}, the estimated coefficients characterizing \eqref{eq:eqs} are unbiased, and therefore we can test Assumption~\ref{ass:eczema}. The tests consists of asking if the predictions variables we use are enough to summarize the treatment effects on the variables we predict, and therefore an indicator of treatment take-up becomes irrelevant when conditioning on these variables. We cannot reject the hypothesis that coefficient associated to random assignment to treatment is different from zero, once we condition on the variables we use to predict (see Table~\ref{table:testing}). Using this same structure, we propose tests for Assumption~\ref{ass:corns} in Appendix~\ref{appendix:methodology}. We do not find strong evidence against it.
+
+\begin{table}[!htbp]
+\begin{threeparttable}
+\caption{Testing Assumption~\ref{ass:eczema}, ABC/CARE}\label{table:testing}
+\scriptsize
+\input{output/abccare_invariancesumm.tex}
+\begin{tablenotes}
+\scriptsize
+\item Note: This table presents results from regressing the different outcomes we predict on the predicted variable, proxies for the unobserved variables, and randomizes assignment to treatment in ABC/CARE ($R$). Empty cells indicate that the variable was not used in the prediction. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystemmain} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. Inference is based on the empirical bootstrap distribution and one-sided $p$-values are in parentheses. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+ \textbf{[JJH: Jorge, do we do this in comparison samples? Where?] [JLG: yes, noting the appendix after assertion now. And they effectively do not change in either the experimental or non-experimental samples.] [JJH: Give me updated figure.] [JLG: All tables with these tests in Appendix C.6.] [JJH: No shift in intercept actually? Seems too strong -- yet we need it.]  [JLG: Yes, we cannot reject differences once we account for all our prediction variables.] [JLG: I'm coordinating with Rodrigo for this on Perry. Not for him to do it, but for me to use the same measures that you use in the AER paper.]}
 
 \subsection{Parental Income} \label{section:pincome}
 
 In practice, ABC/CARE had a childcare component: child care of the mothers of parents of treated children was offered at the center for more than nine hours a day for five years. Recall that only $27\%$ of mothers of children reported to live with a partner at baseline and this status barely changed during the experiment (See Appendix~\ref{appendix:background}). Arguably, this is the component that generates the treatment effects in maternal education, labor force participation, and parental income that reported in Table~\ref{table:tescombined} and Appendix~\ref{appendix:results}.
 
-We observe parental income at eight different years from when the experimental subjects were born until they were 21.\footnote{The ages at which parental income is absorbed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE are, on average, 41 years old.} Our baseline estimation considers the treatment effect on parental income without going beyond this age. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through child's age 21. This is presumably due to wage growth due to higher education and/or experience. An ideal approach considers the profile over the full life cycle of mothers. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; (ii) an approach based on the model of Section~\ref{section:just}. We present estimates using the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}. The benefits of he program increase when considering the full life cycle of mothers, in either approach.
+We observe parental income at eight different years from when the experimental subjects were born until they were 21.\footnote{The ages at which parental income is absorbed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE are, on average, 41 years old.} Our baseline estimation considers the treatment effect on parental income without going beyond this age. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, labor income should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through child's age 21. This is presumably due to wage growth due to higher education and/or experience. An ideal approach considers the profile over the full life cycle of mothers. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; (ii) an approach based on the model of Section~\ref{section:just}. We present estimates using the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}. The benefits of he program increase when considering the full life cycle of mothers, in either approach.
 
 Note that if it is true that ABC/CARE had a childcare component benefits parental labor market outcomes, it is likely the case that it benefits parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). Figure~\ref{figure:pincome} shows that the net increase (treatment minus control) in discounted parental incomes is much higher in the absence of siblings (of the participant children) at baseline. The effect also weakens when comparing children who have children younger than 5 years old to children who have siblings 5 years old or younger.\footnote{These patterns persist when splitting the ABC/CARE sample by gender, but the estimates are not precise because the samples become to small when we split them.}
 
@@ -807,7 +837,7 @@ This paper studies two influential early childhood interventions evaluated by th
 
 To reach these conclusions, we face and address a number of empirical challenges: (a) control group substitution; (b) extrapolating lifetime benefits beyond the experimental period; and (c) multiple hypothesis testing. Our approach serves as a template for economic evaluations of programs with partial follow up over the life cycle.
 
-We find that benefits differ substantially by gender. Females have more beneficial treatment effects than males, but the monetized value of the male treatment effects are greater. There are substantial effects on health and the quality of life and on crime for males. For females, the benefits are concentrated on employment, education and earnings. The effects for females are stronger compared to staying at home. The effects for males are stronger compared to participation in alternate preschools. The program subsidizes causal effect on maternal earnings. We establish the benefits of analyzing long term multiple benefits of this intervention.
+We find that benefits differ substantially by gender. Females have more beneficial treatment effects than males, but the monetized value of the male treatment effects are greater. There are substantial effects on health and the quality of life and on crime for males. For females, the benefits are concentrated on education, employment, and minor crimes. The effects for females are stronger compared to staying at home. The effects for males are stronger compared to participation in alternative preschools. The program subsidizes causal effect on maternal labor income. We establish the benefits of analyzing long term multiple benefits of this intervention.
 
 %References
 \singlespace
