perry tables better labeled

--- a/output/perry_endog_idle40_spooled.tex
+++ b/output/perry_endog_idle40_spooled.tex
@@ -1,19 +1,19 @@
-% matrix: allidle40_spooled file: perry_endog_idle40_spooled.tex  30 Sep 2016 11:05:46
+% matrix: allidle40_spooled file: perry_endog_idle40_spooled.tex  30 Sep 2016 12:10:40
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &    -0.102 &     0.900 &    -0.150 &     0.910 &    -0.072 &     0.835 &    -0.109 &     0.850 &    -0.071 &     0.835 &    -0.103 &     0.835 \\  
-r2 &    -0.001 &     0.540 &     0.001 &     0.475 &     0.014 &     0.185 &     0.009 &     0.325 &     0.014 &     0.205 &     0.010 &     0.295 \\  
-r3 &         . &         . &         . &         . &    -0.001 &     0.575 &    -0.002 &     0.560 &    -0.001 &     0.560 &    -0.002 &     0.575 \\  
-r4 &         . &         . &         . &         . &    -0.048 &     0.985 &    -0.064 &     0.975 &    -0.044 &     0.975 &    -0.059 &     0.970 \\  
-r5 &         . &         . &         . &         . &    -0.000 &     1.000 &    -0.000 &     0.990 &    -0.000 &     1.000 &    -0.000 &     0.980 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . &    -0.079 &     0.820 &    -0.089 &     0.740 \\  
-r7 &         . &         . &    -0.007 &     0.545 &         . &         . &     0.085 &     0.135 &         . &         . &     0.093 &     0.125 \\  
-r8 &         . &         . &    -0.067 &     0.640 &         . &         . &    -0.014 &     0.510 &         . &         . &    -0.017 &     0.530 \\  
-r9 &         . &         . &     0.041 &     0.445 &         . &         . &     0.006 &     0.480 &         . &         . &     0.002 &     0.500 \\  
-r10 &     0.319 &     0.030 &     0.356 &     0.070 &     0.962 &     0.060 &     1.339 &     0.080 &     0.940 &     0.065 &     1.351 &     0.095 \\  
-r11 &     1.784 &     0.070 &     2.651 &     0.045 &     5.278 &     0.020 &     3.704 &     0.040 &     4.914 &     0.010 &     3.746 &     0.035 \\  
-r12 &     0.029 &     0.070 &     0.102 &     0.025 &     0.180 &     0.000 &     0.240 &     0.000 &     0.198 &     0.000 &     0.269 &     0.005 \\  
-r13 &   111.920 &     0.000 &    77.720 &     0.000 &   104.490 &     0.000 &    71.460 &     0.000 &   104.490 &     0.000 &    71.460 &     0.000 \\  
+R &    -0.102 &     0.900 &    -0.150 &     0.910 &    -0.072 &     0.835 &    -0.109 &     0.850 &    -0.071 &     0.835 &    -0.103 &     0.835 \\  
+Mother'sEducation &    -0.001 &     0.540 &     0.001 &     0.475 &     0.014 &     0.185 &     0.009 &     0.325 &     0.014 &     0.205 &     0.010 &     0.295 \\  
+BaselineIQ &         . &         . &         . &         . &    -0.001 &     0.575 &    -0.002 &     0.560 &    -0.001 &     0.560 &    -0.002 &     0.575 \\  
+Education(30) &         . &         . &         . &         . &    -0.048 &     0.985 &    -0.064 &     0.975 &    -0.044 &     0.975 &    -0.059 &     0.970 \\  
+LaborIncome(27) &         . &         . &         . &         . &    -0.000 &     1.000 &    -0.000 &     0.990 &    -0.000 &     1.000 &    -0.000 &     0.980 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &    -0.079 &     0.820 &    -0.089 &     0.740 \\  
+Cognitive &         . &         . &    -0.007 &     0.545 &         . &         . &     0.085 &     0.135 &         . &         . &     0.093 &     0.125 \\  
+Externalizing &         . &         . &    -0.067 &     0.640 &         . &         . &    -0.014 &     0.510 &         . &         . &    -0.017 &     0.530 \\  
+Academic &         . &         . &     0.041 &     0.445 &         . &         . &     0.006 &     0.480 &         . &         . &     0.002 &     0.500 \\  
+Constant &     0.319 &     0.030 &     0.356 &     0.070 &     0.962 &     0.060 &     1.339 &     0.080 &     0.940 &     0.065 &     1.351 &     0.095 \\  
+F-stat &     1.784 &         . &     2.651 &         . &     5.278 &         . &     3.704 &         . &     4.914 &         . &     3.746 &         . \\  
+R2 &     0.029 &         . &     0.102 &         . &     0.180 &         . &     0.240 &         . &     0.198 &         . &     0.269 &         . \\  
+Observations &   111.920 &         . &    77.720 &         . &   104.490 &         . &    71.460 &         . &   104.490 &         . &    71.460 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
