--- a/output/perry_endog_hs40_sfemale.tex
+++ b/output/perry_endog_hs40_sfemale.tex
@@ -1,19 +1,19 @@
-% matrix: allhs40_sfemale file: perry_endog_hs40_sfemale.tex  30 Sep 2016 11:02:55
+% matrix: allhs40_sfemale file: perry_endog_hs40_sfemale.tex  30 Sep 2016 12:07:16
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &     0.237 &     0.040 &     0.199 &     0.135 &     0.271 &     0.020 &     0.307 &     0.120 &     0.263 &     0.025 &     0.269 &     0.145 \\  
-r2 &     0.037 &     0.075 &    -0.011 &     0.635 &     0.013 &     0.320 &    -0.008 &     0.550 &     0.014 &     0.330 &    -0.018 &     0.655 \\  
-r3 &         . &         . &         . &         . &     0.005 &     0.380 &    -0.003 &     0.530 &     0.004 &     0.390 &    -0.004 &     0.555 \\  
-r4 &         . &         . &         . &         . &     0.098 &     0.050 &     0.062 &     0.260 &     0.092 &     0.065 &     0.040 &     0.355 \\  
-r5 &         . &         . &         . &         . &    -0.000 &     0.610 &    -0.000 &     0.705 &    -0.000 &     0.595 &    -0.000 &     0.720 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . &     0.066 &     0.320 &     0.246 &     0.130 \\  
-r7 &         . &         . &     0.030 &     0.355 &         . &         . &     0.010 &     0.445 &         . &         . &    -0.018 &     0.625 \\  
-r8 &         . &         . &    -0.158 &     0.640 &         . &         . &    -0.146 &     0.610 &         . &         . &    -0.195 &     0.645 \\  
-r9 &         . &         . &     0.044 &     0.440 &         . &         . &     0.026 &     0.460 &         . &         . &     0.045 &     0.435 \\  
-r10 &     0.168 &     0.305 &     0.637 &     0.085 &    -1.235 &     0.745 &     0.091 &     0.490 &    -1.154 &     0.745 &     0.423 &     0.435 \\  
-r11 &     4.226 &     0.070 &     5.802 &     0.070 &     6.015 &     0.075 &    12.330 &     0.075 &     5.801 &     0.080 &    15.161 &     0.065 \\  
-r12 &     0.141 &     0.050 &     0.271 &     0.015 &     0.309 &     0.005 &     0.465 &     0.000 &     0.324 &     0.005 &     0.532 &     0.000 \\  
-r13 &    47.080 &     0.000 &    31.760 &     0.000 &    46.160 &     0.000 &    30.840 &     0.000 &    46.160 &     0.000 &    30.840 &     0.000 \\  
+R &     0.237 &     0.040 &     0.199 &     0.135 &     0.271 &     0.020 &     0.307 &     0.120 &     0.263 &     0.025 &     0.269 &     0.145 \\  
+Mother'sEducation &     0.037 &     0.075 &    -0.011 &     0.635 &     0.013 &     0.320 &    -0.008 &     0.550 &     0.014 &     0.330 &    -0.018 &     0.655 \\  
+BaselineIQ &         . &         . &         . &         . &     0.005 &     0.380 &    -0.003 &     0.530 &     0.004 &     0.390 &    -0.004 &     0.555 \\  
+Education(30) &         . &         . &         . &         . &     0.098 &     0.050 &     0.062 &     0.260 &     0.092 &     0.065 &     0.040 &     0.355 \\  
+LaborIncome(27) &         . &         . &         . &         . &    -0.000 &     0.610 &    -0.000 &     0.705 &    -0.000 &     0.595 &    -0.000 &     0.720 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &     0.066 &     0.320 &     0.246 &     0.130 \\  
+Cognitive &         . &         . &     0.030 &     0.355 &         . &         . &     0.010 &     0.445 &         . &         . &    -0.018 &     0.625 \\  
+Externalizing &         . &         . &    -0.158 &     0.640 &         . &         . &    -0.146 &     0.610 &         . &         . &    -0.195 &     0.645 \\  
+Academic &         . &         . &     0.044 &     0.440 &         . &         . &     0.026 &     0.460 &         . &         . &     0.045 &     0.435 \\  
+Constant &     0.168 &     0.305 &     0.637 &     0.085 &    -1.235 &     0.745 &     0.091 &     0.490 &    -1.154 &     0.745 &     0.423 &     0.435 \\  
+F-stat &     4.226 &         . &     5.802 &         . &     6.015 &         . &    12.330 &         . &     5.801 &         . &    15.161 &         . \\  
+R2 &     0.141 &         . &     0.271 &         . &     0.309 &         . &     0.465 &         . &     0.324 &         . &     0.532 &         . \\  
+Observations &    47.080 &         . &    31.760 &         . &    46.160 &         . &    30.840 &         . &    46.160 &         . &    30.840 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
