--- a/output/perry_endog_hs40_smale.tex
+++ b/output/perry_endog_hs40_smale.tex
@@ -1,19 +1,19 @@
-% matrix: allhs40_smale file: perry_endog_hs40_smale.tex  30 Sep 2016 11:00:44
+% matrix: allhs40_smale file: perry_endog_hs40_smale.tex  30 Sep 2016 12:04:48
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &     0.076 &     0.280 &     0.127 &     0.215 &    -0.004 &     0.515 &     0.040 &     0.395 &    -0.004 &     0.520 &     0.048 &     0.375 \\  
-r2 &     0.047 &     0.060 &     0.033 &     0.185 &     0.008 &     0.385 &     0.010 &     0.395 &     0.008 &     0.375 &     0.010 &     0.395 \\  
-r3 &         . &         . &         . &         . &    -0.000 &     0.505 &     0.003 &     0.450 &    -0.000 &     0.515 &     0.003 &     0.445 \\  
-r4 &         . &         . &         . &         . &     0.120 &     0.000 &     0.158 &     0.005 &     0.119 &     0.000 &     0.158 &     0.005 \\  
-r5 &         . &         . &         . &         . &     0.000 &     0.005 &     0.000 &     0.055 &     0.000 &     0.000 &     0.000 &     0.055 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . &     0.007 &     0.485 &    -0.084 &     0.690 \\  
-r7 &         . &         . &     0.136 &     0.080 &         . &         . &    -0.125 &     0.815 &         . &         . &    -0.116 &     0.785 \\  
-r8 &         . &         . &    -0.104 &     0.675 &         . &         . &     0.183 &     0.370 &         . &         . &     0.192 &     0.370 \\  
-r9 &         . &         . &     0.092 &     0.340 &         . &         . &    -0.196 &     0.645 &         . &         . &    -0.216 &     0.630 \\  
-r10 &     0.080 &     0.390 &     0.133 &     0.360 &    -1.148 &     0.950 &    -1.882 &     0.915 &    -1.137 &     0.940 &    -1.852 &     0.905 \\  
-r11 &     3.100 &     0.060 &     6.821 &     0.070 &    18.996 &     0.015 &    12.834 &     0.040 &    16.776 &     0.010 &    13.692 &     0.040 \\  
-r12 &     0.074 &     0.040 &     0.215 &     0.020 &     0.438 &     0.000 &     0.513 &     0.000 &     0.450 &     0.000 &     0.536 &     0.000 \\  
-r13 &    65.780 &     0.000 &    46.500 &     0.000 &    59.410 &     0.000 &    41.120 &     0.000 &    59.410 &     0.000 &    41.120 &     0.000 \\  
+R &     0.076 &     0.280 &     0.127 &     0.215 &    -0.004 &     0.515 &     0.040 &     0.395 &    -0.004 &     0.520 &     0.048 &     0.375 \\  
+Mother'sEducation &     0.047 &     0.060 &     0.033 &     0.185 &     0.008 &     0.385 &     0.010 &     0.395 &     0.008 &     0.375 &     0.010 &     0.395 \\  
+BaselineIQ &         . &         . &         . &         . &    -0.000 &     0.505 &     0.003 &     0.450 &    -0.000 &     0.515 &     0.003 &     0.445 \\  
+Education(30) &         . &         . &         . &         . &     0.120 &     0.000 &     0.158 &     0.005 &     0.119 &     0.000 &     0.158 &     0.005 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.000 &     0.005 &     0.000 &     0.055 &     0.000 &     0.000 &     0.000 &     0.055 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &     0.007 &     0.485 &    -0.084 &     0.690 \\  
+Cognitive &         . &         . &     0.136 &     0.080 &         . &         . &    -0.125 &     0.815 &         . &         . &    -0.116 &     0.785 \\  
+Externalizing &         . &         . &    -0.104 &     0.675 &         . &         . &     0.183 &     0.370 &         . &         . &     0.192 &     0.370 \\  
+Academic &         . &         . &     0.092 &     0.340 &         . &         . &    -0.196 &     0.645 &         . &         . &    -0.216 &     0.630 \\  
+Constant &     0.080 &     0.390 &     0.133 &     0.360 &    -1.148 &     0.950 &    -1.882 &     0.915 &    -1.137 &     0.940 &    -1.852 &     0.905 \\  
+F-stat &     3.100 &         . &     6.821 &         . &    18.996 &         . &    12.834 &         . &    16.776 &         . &    13.692 &         . \\  
+R2 &     0.074 &         . &     0.215 &         . &     0.438 &         . &     0.513 &         . &     0.450 &         . &     0.536 &         . \\  
+Observations &    65.780 &         . &    46.500 &         . &    59.410 &         . &    41.120 &         . &    59.410 &         . &    41.120 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
