--- a/output/perry_endog_idle40_sfemale.tex
+++ b/output/perry_endog_idle40_sfemale.tex
@@ -1,19 +1,19 @@
-% matrix: allidle40_sfemale file: perry_endog_idle40_sfemale.tex  30 Sep 2016 11:03:37
+% matrix: allidle40_sfemale file: perry_endog_idle40_sfemale.tex  30 Sep 2016 12:07:59
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &     0.046 &     0.325 &     0.063 &     0.325 &     0.065 &     0.265 &     0.101 &     0.310 &     0.063 &     0.270 &     0.068 &     0.340 \\  
-r2 &    -0.013 &     0.725 &    -0.021 &     0.675 &     0.008 &     0.400 &    -0.004 &     0.555 &     0.009 &     0.400 &    -0.013 &     0.610 \\  
-r3 &         . &         . &         . &         . &     0.003 &     0.380 &     0.016 &     0.100 &     0.003 &     0.370 &     0.017 &     0.145 \\  
-r4 &         . &         . &         . &         . &    -0.023 &     0.805 &     0.013 &     0.400 &    -0.028 &     0.810 &    -0.006 &     0.530 \\  
-r5 &         . &         . &         . &         . &    -0.000 &     0.960 &    -0.000 &     0.945 &    -0.000 &     0.955 &    -0.000 &     0.935 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . &     0.084 &     0.215 &     0.236 &     0.115 \\  
-r7 &         . &         . &    -0.026 &     0.605 &         . &         . &    -0.073 &     0.760 &         . &         . &    -0.092 &     0.800 \\  
-r8 &         . &         . &    -0.023 &     0.520 &         . &         . &    -0.098 &     0.630 &         . &         . &    -0.135 &     0.670 \\  
-r9 &         . &         . &     0.030 &     0.420 &         . &         . &     0.039 &     0.430 &         . &         . &     0.052 &     0.410 \\  
-r10 &     0.252 &     0.135 &     0.353 &     0.200 &     0.178 &     0.425 &    -1.171 &     0.850 &     0.209 &     0.420 &    -1.001 &     0.750 \\  
-r11 &     1.111 &     0.060 &     1.414 &     0.035 &     1.801 &     0.030 &     2.944 &     0.070 &     1.750 &     0.040 &     3.985 &     0.055 \\  
-r12 &     0.048 &     0.075 &     0.215 &     0.030 &     0.186 &     0.000 &     0.413 &     0.010 &     0.224 &     0.010 &     0.504 &     0.010 \\  
-r13 &    46.400 &     0.000 &    31.380 &     0.000 &    45.460 &     0.000 &    30.440 &     0.000 &    45.460 &     0.000 &    30.440 &     0.000 \\  
+R &     0.046 &     0.325 &     0.063 &     0.325 &     0.065 &     0.265 &     0.101 &     0.310 &     0.063 &     0.270 &     0.068 &     0.340 \\  
+Mother'sEducation &    -0.013 &     0.725 &    -0.021 &     0.675 &     0.008 &     0.400 &    -0.004 &     0.555 &     0.009 &     0.400 &    -0.013 &     0.610 \\  
+BaselineIQ &         . &         . &         . &         . &     0.003 &     0.380 &     0.016 &     0.100 &     0.003 &     0.370 &     0.017 &     0.145 \\  
+Education(30) &         . &         . &         . &         . &    -0.023 &     0.805 &     0.013 &     0.400 &    -0.028 &     0.810 &    -0.006 &     0.530 \\  
+LaborIncome(27) &         . &         . &         . &         . &    -0.000 &     0.960 &    -0.000 &     0.945 &    -0.000 &     0.955 &    -0.000 &     0.935 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &     0.084 &     0.215 &     0.236 &     0.115 \\  
+Cognitive &         . &         . &    -0.026 &     0.605 &         . &         . &    -0.073 &     0.760 &         . &         . &    -0.092 &     0.800 \\  
+Externalizing &         . &         . &    -0.023 &     0.520 &         . &         . &    -0.098 &     0.630 &         . &         . &    -0.135 &     0.670 \\  
+Academic &         . &         . &     0.030 &     0.420 &         . &         . &     0.039 &     0.430 &         . &         . &     0.052 &     0.410 \\  
+Constant &     0.252 &     0.135 &     0.353 &     0.200 &     0.178 &     0.425 &    -1.171 &     0.850 &     0.209 &     0.420 &    -1.001 &     0.750 \\  
+F-stat &     1.111 &         . &     1.414 &         . &     1.801 &         . &     2.944 &         . &     1.750 &         . &     3.985 &         . \\  
+R2 &     0.048 &         . &     0.215 &         . &     0.186 &         . &     0.413 &         . &     0.224 &         . &     0.504 &         . \\  
+Observations &    46.400 &         . &    31.380 &         . &    45.460 &         . &    30.440 &         . &    45.460 &         . &    30.440 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
