--- a/output/perry_endog_inc40_sfemale.tex
+++ b/output/perry_endog_inc40_sfemale.tex
@@ -1,19 +1,19 @@
-% matrix: allinc40_sfemale file: perry_endog_inc40_sfemale.tex  30 Sep 2016 11:02:10
+% matrix: allinc40_sfemale file: perry_endog_inc40_sfemale.tex  30 Sep 2016 12:06:15
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &  1215.714 &     0.440 & -2982.821 &     0.645 &  1928.146 &     0.380 &  2067.990 &     0.430 &  1715.864 &     0.415 &  1811.690 &     0.445 \\  
-r2 &  2810.182 &     0.015 &  1977.426 &     0.180 &  -261.824 &     0.630 & -1426.054 &     0.710 &   -90.478 &     0.525 & -1727.354 &     0.745 \\  
-r3 &         . &         . &         . &         . &  -137.031 &     0.635 &  -551.887 &     0.720 &  -159.193 &     0.695 &  -588.908 &     0.755 \\  
-r4 &         . &         . &         . &         . &  6235.249 &     0.010 &  8926.400 &     0.085 &  5688.953 &     0.025 &  8241.049 &     0.115 \\  
-r5 &         . &         . &         . &         . &     0.334 &     0.070 &     0.298 &     0.175 &     0.337 &     0.075 &     0.317 &     0.155 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . &  8687.005 &     0.110 &  7746.221 &     0.265 \\  
-r7 &         . &         . &  3013.229 &     0.255 &         . &         . &  2031.371 &     0.345 &         . &         . &  1515.436 &     0.405 \\  
-r8 &         . &         . & -2.92e+04 &     0.850 &         . &         . & -2.09e+04 &     0.805 &         . &         . & -2.20e+04 &     0.805 \\  
-r9 &         . &         . & 15072.038 &     0.235 &         . &         . & 11739.965 &     0.285 &         . &         . & 11496.702 &     0.295 \\  
-r10 & -1931.123 &     0.565 &   -90.951 &     0.500 & -4.94e+04 &     0.865 & -4.23e+04 &     0.665 & -4.66e+04 &     0.850 & -3.16e+04 &     0.605 \\  
-r11 &     3.282 &     0.040 &     8.182 &     0.060 &     9.566 &     0.045 &    27.271 &     0.050 &    10.070 &     0.045 &    33.597 &     0.035 \\  
-r12 &     0.094 &     0.040 &     0.316 &     0.015 &     0.438 &     0.000 &     0.601 &     0.000 &     0.476 &     0.000 &     0.641 &     0.000 \\  
-r13 &    45.260 &     0.000 &    31.110 &     0.000 &    44.250 &     0.000 &    30.100 &     0.000 &    44.250 &     0.000 &    30.100 &     0.000 \\  
+R &  1215.714 &     0.440 & -2982.821 &     0.645 &  1928.146 &     0.380 &  2067.990 &     0.430 &  1715.864 &     0.415 &  1811.690 &     0.445 \\  
+Mother'sEducation &  2810.182 &     0.015 &  1977.426 &     0.180 &  -261.824 &     0.630 & -1426.054 &     0.710 &   -90.478 &     0.525 & -1727.354 &     0.745 \\  
+BaselineIQ &         . &         . &         . &         . &  -137.031 &     0.635 &  -551.887 &     0.720 &  -159.193 &     0.695 &  -588.908 &     0.755 \\  
+Education(30) &         . &         . &         . &         . &  6235.249 &     0.010 &  8926.400 &     0.085 &  5688.953 &     0.025 &  8241.049 &     0.115 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.334 &     0.070 &     0.298 &     0.175 &     0.337 &     0.075 &     0.317 &     0.155 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &  8687.005 &     0.110 &  7746.221 &     0.265 \\  
+Cognitive &         . &         . &  3013.229 &     0.255 &         . &         . &  2031.371 &     0.345 &         . &         . &  1515.436 &     0.405 \\  
+Externalizing &         . &         . & -2.92e+04 &     0.850 &         . &         . & -2.09e+04 &     0.805 &         . &         . & -2.20e+04 &     0.805 \\  
+Academic &         . &         . & 15072.038 &     0.235 &         . &         . & 11739.965 &     0.285 &         . &         . & 11496.702 &     0.295 \\  
+Constant & -1931.123 &     0.565 &   -90.951 &     0.500 & -4.94e+04 &     0.865 & -4.23e+04 &     0.665 & -4.66e+04 &     0.850 & -3.16e+04 &     0.605 \\  
+F-stat &     3.282 &         . &     8.182 &         . &     9.566 &         . &    27.271 &         . &    10.070 &         . &    33.597 &         . \\  
+R2 &     0.094 &         . &     0.316 &         . &     0.438 &         . &     0.601 &         . &     0.476 &         . &     0.641 &         . \\  
+Observations &    45.260 &         . &    31.110 &         . &    44.250 &         . &    30.100 &         . &    44.250 &         . &    30.100 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
