--- a/output/perry_endog_inc40_smale.tex
+++ b/output/perry_endog_inc40_smale.tex
@@ -1,19 +1,19 @@
-% matrix: allinc40_smale file: perry_endog_inc40_smale.tex  30 Sep 2016 11:00:00
+% matrix: allinc40_smale file: perry_endog_inc40_smale.tex  30 Sep 2016 12:04:07
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &  4869.612 &     0.280 & 11445.855 &     0.160 & -4401.085 &     0.705 &   316.067 &     0.485 & -5212.235 &     0.770 & -1166.844 &     0.530 \\  
-r2 &    33.811 &     0.485 & -1236.716 &     0.745 & -1526.763 &     0.815 &  -822.059 &     0.665 & -1505.061 &     0.825 &  -646.511 &     0.670 \\  
-r3 &         . &         . &         . &         . &  1006.931 &     0.020 &  1281.711 &     0.065 &   872.478 &     0.050 &  1312.354 &     0.050 \\  
-r4 &         . &         . &         . &         . &  4215.785 &     0.065 &  5123.981 &     0.070 &  3771.934 &     0.080 &  4943.399 &     0.080 \\  
-r5 &         . &         . &         . &         . &     0.696 &     0.000 &     0.608 &     0.005 &     0.695 &     0.000 &     0.599 &     0.010 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . & 13591.124 &     0.005 & 16332.684 &     0.025 \\  
-r7 &         . &         . & 17865.373 &     0.005 &         . &         . &  1579.767 &     0.415 &         . &         . &  -825.233 &     0.555 \\  
-r8 &         . &         . & -2.33e+04 &     0.875 &         . &         . & -3.43e+04 &     0.950 &         . &         . & -3.37e+04 &     0.925 \\  
-r9 &         . &         . & 12765.900 &     0.280 &         . &         . & 24248.145 &     0.110 &         . &         . & 23250.219 &     0.160 \\  
-r10 & 25151.734 &     0.100 & 28938.467 &     0.090 & -1.05e+05 &     1.000 & -1.51e+05 &     0.985 & -9.75e+04 &     0.995 & -1.62e+05 &     0.990 \\  
-r11 &     1.402 &     0.075 &    22.551 &     0.035 &    12.898 &     0.055 &    38.643 &     0.065 &    13.191 &     0.035 &    42.885 &     0.065 \\  
-r12 &     0.035 &     0.060 &     0.360 &     0.000 &     0.509 &     0.000 &     0.671 &     0.000 &     0.551 &     0.000 &     0.726 &     0.000 \\  
-r13 &    66.690 &     0.000 &    47.430 &     0.000 &    60.590 &     0.000 &    42.150 &     0.000 &    60.590 &     0.000 &    42.150 &     0.000 \\  
+R &  4869.612 &     0.280 & 11445.855 &     0.160 & -4401.085 &     0.705 &   316.067 &     0.485 & -5212.235 &     0.770 & -1166.844 &     0.530 \\  
+Mother'sEducation &    33.811 &     0.485 & -1236.716 &     0.745 & -1526.763 &     0.815 &  -822.059 &     0.665 & -1505.061 &     0.825 &  -646.511 &     0.670 \\  
+BaselineIQ &         . &         . &         . &         . &  1006.931 &     0.020 &  1281.711 &     0.065 &   872.478 &     0.050 &  1312.354 &     0.050 \\  
+Education(30) &         . &         . &         . &         . &  4215.785 &     0.065 &  5123.981 &     0.070 &  3771.934 &     0.080 &  4943.399 &     0.080 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.696 &     0.000 &     0.608 &     0.005 &     0.695 &     0.000 &     0.599 &     0.010 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . & 13591.124 &     0.005 & 16332.684 &     0.025 \\  
+Cognitive &         . &         . & 17865.373 &     0.005 &         . &         . &  1579.767 &     0.415 &         . &         . &  -825.233 &     0.555 \\  
+Externalizing &         . &         . & -2.33e+04 &     0.875 &         . &         . & -3.43e+04 &     0.950 &         . &         . & -3.37e+04 &     0.925 \\  
+Academic &         . &         . & 12765.900 &     0.280 &         . &         . & 24248.145 &     0.110 &         . &         . & 23250.219 &     0.160 \\  
+Constant & 25151.734 &     0.100 & 28938.467 &     0.090 & -1.05e+05 &     1.000 & -1.51e+05 &     0.985 & -9.75e+04 &     0.995 & -1.62e+05 &     0.990 \\  
+F-stat &     1.402 &         . &    22.551 &         . &    12.898 &         . &    38.643 &         . &    13.191 &         . &    42.885 &         . \\  
+R2 &     0.035 &         . &     0.360 &         . &     0.509 &         . &     0.671 &         . &     0.551 &         . &     0.726 &         . \\  
+Observations &    66.690 &         . &    47.430 &         . &    60.590 &         . &    42.150 &         . &    60.590 &         . &    42.150 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
