--- a/output/perry_endog_inc40_spooled.tex
+++ b/output/perry_endog_inc40_spooled.tex
@@ -1,19 +1,19 @@
-% matrix: allinc40_spooled file: perry_endog_inc40_spooled.tex  30 Sep 2016 11:04:17
+% matrix: allinc40_spooled file: perry_endog_inc40_spooled.tex  30 Sep 2016 12:08:46
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &  3406.239 &     0.295 &  4763.972 &     0.280 & -2488.744 &     0.715 & -1220.114 &     0.560 & -2848.218 &     0.730 & -2276.492 &     0.635 \\  
-r2 &  1425.444 &     0.115 &     6.573 &     0.495 &  -806.375 &     0.760 & -1139.198 &     0.830 &  -732.494 &     0.750 & -1209.879 &     0.850 \\  
-r3 &         . &         . &         . &         . &   633.646 &     0.020 &   705.351 &     0.050 &   588.359 &     0.025 &   798.949 &     0.050 \\  
-r4 &         . &         . &         . &         . &  5278.501 &     0.010 &  6660.161 &     0.010 &  4826.815 &     0.005 &  6243.950 &     0.010 \\  
-r5 &         . &         . &         . &         . &     0.580 &     0.000 &     0.544 &     0.000 &     0.563 &     0.000 &     0.538 &     0.000 \\  
-r6 &         . &         . &         . &         . &         . &         . &         . &         . & 12337.827 &     0.000 & 13531.420 &     0.005 \\  
-r7 &         . &         . & 12971.826 &     0.000 &         . &         . &  2262.454 &     0.345 &         . &         . &   637.051 &     0.440 \\  
-r8 &         . &         . & -1.89e+04 &     0.890 &         . &         . & -2.20e+04 &     0.935 &         . &         . & -2.13e+04 &     0.940 \\  
-r9 &         . &         . & 11651.536 &     0.170 &         . &         . & 14414.466 &     0.150 &         . &         . & 14575.125 &     0.140 \\  
-r10 & 11005.526 &     0.155 & 20193.223 &     0.095 & -9.50e+04 &     0.995 & -1.19e+05 &     0.985 & -9.32e+04 &     0.995 & -1.27e+05 &     0.995 \\  
-r11 &     2.746 &     0.050 &     6.282 &     0.050 &    15.130 &     0.015 &    16.311 &     0.050 &    16.019 &     0.030 &    19.332 &     0.040 \\  
-r12 &     0.035 &     0.050 &     0.238 &     0.005 &     0.443 &     0.000 &     0.553 &     0.000 &     0.486 &     0.000 &     0.596 &     0.000 \\  
-r13 &   112.120 &     0.000 &    77.980 &     0.000 &   105.460 &     0.000 &    72.350 &     0.000 &   105.460 &     0.000 &    72.350 &     0.000 \\  
+R &  3406.239 &     0.295 &  4763.972 &     0.280 & -2488.744 &     0.715 & -1220.114 &     0.560 & -2848.218 &     0.730 & -2276.492 &     0.635 \\  
+Mother'sEducation &  1425.444 &     0.115 &     6.573 &     0.495 &  -806.375 &     0.760 & -1139.198 &     0.830 &  -732.494 &     0.750 & -1209.879 &     0.850 \\  
+BaselineIQ &         . &         . &         . &         . &   633.646 &     0.020 &   705.351 &     0.050 &   588.359 &     0.025 &   798.949 &     0.050 \\  
+Education(30) &         . &         . &         . &         . &  5278.501 &     0.010 &  6660.161 &     0.010 &  4826.815 &     0.005 &  6243.950 &     0.010 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.580 &     0.000 &     0.544 &     0.000 &     0.563 &     0.000 &     0.538 &     0.000 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . & 12337.827 &     0.000 & 13531.420 &     0.005 \\  
+Cognitive &         . &         . & 12971.826 &     0.000 &         . &         . &  2262.454 &     0.345 &         . &         . &   637.051 &     0.440 \\  
+Externalizing &         . &         . & -1.89e+04 &     0.890 &         . &         . & -2.20e+04 &     0.935 &         . &         . & -2.13e+04 &     0.940 \\  
+Academic &         . &         . & 11651.536 &     0.170 &         . &         . & 14414.466 &     0.150 &         . &         . & 14575.125 &     0.140 \\  
+Constant & 11005.526 &     0.155 & 20193.223 &     0.095 & -9.50e+04 &     0.995 & -1.19e+05 &     0.985 & -9.32e+04 &     0.995 & -1.27e+05 &     0.995 \\  
+F-stat &     2.746 &         . &     6.282 &         . &    15.130 &         . &    16.311 &         . &    16.019 &         . &    19.332 &         . \\  
+R2 &     0.035 &         . &     0.238 &         . &     0.443 &         . &     0.553 &         . &     0.486 &         . &     0.596 &         . \\  
+Observations &   112.120 &         . &    77.980 &         . &   105.460 &         . &    72.350 &         . &   105.460 &         . &    72.350 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
