--- a/output/abccare_endog_si30y_inc_labor_sfemale.tex
+++ b/output/abccare_endog_si30y_inc_labor_sfemale.tex
@@ -1,18 +1,18 @@
-% matrix: allsi30y_inc_labor_sfemale file: abccare_endog_si30y_inc_labor_sfemale.tex  30 Sep 2016 12:03:10
+% matrix: allsi30y_inc_labor_sfemale file: abccare_endog_si30y_inc_labor_sfemale.tex  30 Sep 2016 12:11:07
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-R &   782.275 &     0.400 & -2936.153 &     0.600 & -1.01e+04 &     1.000 & -8772.104 &     1.000 & -1.31e+04 &     1.000 & -1.17e+04 &     1.000 \\  
-Mother'sEducation &   -30.443 &     0.500 & -1165.036 &     0.500 & -1784.969 &     0.700 & -1944.491 &     0.700 & -1768.758 &     0.800 & -1937.034 &     0.600 \\  
-BaselineIQ &         . &         . &         . &         . &   208.809 &     0.200 &    68.646 &     0.500 &   171.378 &     0.400 &   -25.662 &     0.500 \\  
-Education(30) &         . &         . &         . &         . &  3258.856 &     0.000 &  3412.331 &     0.000 &  5682.597 &     0.000 &  5946.888 &     0.000 \\  
-LaborIncome(27) &         . &         . &         . &         . &     0.274 &     0.000 &     0.335 &     0.000 &     0.272 &     0.200 &     0.279 &     0.100 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &   -91.807 &     0.500 &  -131.070 &     0.700 \\  
-Cognitive &         . &         . &  4506.029 &     0.100 &         . &         . &   674.063 &     0.300 &         . &         . &  1189.644 &     0.400 \\  
-NonCognitive &         . &         . &  1787.071 &     0.400 &         . &         . &  5325.430 &     0.000 &         . &         . &  3685.236 &     0.200 \\  
-Constant & 23466.434 &     0.300 & 33710.719 &     0.100 & -2.01e+04 &     0.600 & -9102.381 &     0.600 & -3.96e+04 &     1.000 & -2.16e+04 &     0.800 \\  
-F-stat &     2.834 &         . &     2.845 &         . &    11.775 &         . &    12.853 &         . &     5.423 &         . &     5.987 &         . \\  
-R2 &     0.079 &         . &     0.165 &         . &     0.368 &         . &     0.417 &         . &     0.362 &         . &     0.420 &         . \\  
-Observations &    63.400 &         . &    49.800 &         . &    51.000 &         . &    47.000 &         . &    41.000 &         . &    37.800 &         . \\  
+R &  1813.936 &     0.370 &  -142.893 &     0.515 & -6779.593 &     0.915 & -5823.283 &     0.890 & -1.07e+04 &     0.965 & -1.18e+04 &     0.950 \\  
+Mother'sEducation &  -362.030 &     0.565 & -1172.507 &     0.720 & -2284.401 &     0.915 & -2006.928 &     0.870 & -2566.533 &     0.875 & -2248.212 &     0.800 \\  
+BaselineIQ &         . &         . &         . &         . &   214.441 &     0.240 &   199.340 &     0.315 &   255.187 &     0.230 &    -1.569 &     0.500 \\  
+Education(30) &         . &         . &         . &         . &  3558.591 &     0.015 &  4019.946 &     0.005 &  5934.033 &     0.005 &  7140.629 &     0.005 \\  
+LaborIncome(27) &         . &         . &         . &         . &     0.328 &     0.130 &     0.400 &     0.125 &     0.320 &     0.155 &     0.219 &     0.295 \\  
+HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &  -106.867 &     0.690 &  -138.059 &     0.725 \\  
+Cognitive &         . &         . &  4268.597 &     0.055 &         . &         . & -1513.535 &     0.645 &         . &         . &  1103.300 &     0.385 \\  
+NonCognitive &         . &         . &  -733.528 &     0.565 &         . &         . &  3086.903 &     0.185 &         . &         . &   486.416 &     0.450 \\  
+Constant & 27597.588 &     0.095 & 34798.168 &     0.065 & -2.01e+04 &     0.770 & -2.87e+04 &     0.760 & -4.23e+04 &     0.895 & -3.21e+04 &     0.785 \\  
+F-stat &     1.372 &         . &     2.701 &         . &     7.850 &         . &     8.768 &         . &     7.351 &         . &     8.930 &         . \\  
+R2 &     0.038 &         . &     0.137 &         . &     0.343 &         . &     0.383 &         . &     0.361 &         . &     0.436 &         . \\  
+Observations &    67.310 &         . &    52.400 &         . &    56.390 &         . &    50.540 &         . &    44.370 &         . &    39.400 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
