here with the new abc tables with correct tables

--- a/output/abccare_endog_p_inc21y_spooled.tex
+++ b/output/abccare_endog_p_inc21y_spooled.tex
@@ -1,13 +1,13 @@
-% matrix: allp_inc21y_spooled file: abccare_endog_p_inc21y_spooled.tex  30 Sep 2016 12:14:38
+% matrix: allp_inc21y_spooled file: abccare_endog_p_inc21y_spooled.tex  30 Sep 2016 13:35:57
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
 R &  9135.193 &     0.005 &  8340.508 &     0.020 &  5996.243 &     0.090 &  8323.831 &     0.020 &  5663.172 &     0.140 &  9081.051 &     0.050 \\  
 Mother'sEducation &   371.487 &     0.295 &    56.815 &     0.490 &   116.469 &     0.460 &   331.883 &     0.395 &    23.231 &     0.500 &  1416.081 &     0.155 \\  
-BaselineIQ &         . &         . &         . &         . &   167.255 &     0.270 &   -36.317 &     0.545 &   417.948 &     0.120 &  -366.897 &     0.705 \\  
+PIAT(5-7) &         . &         . &         . &         . &   167.255 &     0.270 &   -36.317 &     0.545 &   417.948 &     0.120 &  -366.897 &     0.705 \\  
 Education(30) &         . &         . &         . &         . &   305.407 &     0.355 &   390.837 &     0.390 &  -550.126 &     0.620 & -1974.946 &     0.785 \\  
-LaborIncome(27) &         . &         . &         . &         . &    -0.029 &     0.555 &     0.118 &     0.330 &    -0.028 &     0.520 &     0.071 &     0.440 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &   -82.230 &     0.655 &    10.088 &     0.495 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.029 &     0.555 &     0.118 &     0.330 &    -0.028 &     0.520 &     0.071 &     0.440 \\  
+BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &   -82.230 &     0.655 &    10.088 &     0.495 \\  
 Cognitive &         . &         . &  3740.234 &     0.045 &         . &         . &  2121.137 &     0.275 &         . &         . &  5186.448 &     0.170 \\  
 NonCognitive &         . &         . &  3439.402 &     0.100 &         . &         . &  6340.704 &     0.025 &         . &         . &  8709.012 &     0.025 \\  
 Constant & 17900.693 &     0.020 & 20605.602 &     0.025 &   595.021 &     0.490 & 14073.724 &     0.390 & -8777.005 &     0.580 & 63774.410 &     0.180 \\  
