--- a/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_spooled.tex
@@ -1,13 +1,13 @@
-% matrix: allsi30y_inc_trans_pub_spooled file: abccare_endog_si30y_inc_trans_pub_spooled.tex  30 Sep 2016 12:13:52
+% matrix: allsi30y_inc_trans_pub_spooled file: abccare_endog_si30y_inc_trans_pub_spooled.tex  30 Sep 2016 13:35:16
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
 R & -1733.903 &     0.995 &  -980.709 &     0.865 &  -936.173 &     0.890 &  -936.672 &     0.825 & -2027.025 &     0.930 & -2559.704 &     0.885 \\  
 Mother'sEducation &  -258.666 &     0.800 &  -408.455 &     0.840 &  -128.223 &     0.640 &  -204.455 &     0.685 &    13.224 &     0.485 &    38.694 &     0.470 \\  
-BaselineIQ &         . &         . &         . &         . &   -25.556 &     0.750 &   -68.827 &     0.785 &   -46.540 &     0.815 &  -112.712 &     0.820 \\  
+PIAT(5-7) &         . &         . &         . &         . &   -25.556 &     0.750 &   -68.827 &     0.785 &   -46.540 &     0.815 &  -112.712 &     0.820 \\  
 Education(30) &         . &         . &         . &         . &  -388.779 &     0.955 &  -409.459 &     0.930 &  -459.663 &     0.890 &  -487.178 &     0.810 \\  
-LaborIncome(27) &         . &         . &         . &         . &    -0.091 &     0.990 &    -0.086 &     0.975 &    -0.118 &     0.980 &    -0.142 &     0.950 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &    12.734 &     0.425 &    15.971 &     0.390 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.091 &     0.990 &    -0.086 &     0.975 &    -0.118 &     0.980 &    -0.142 &     0.950 \\  
+BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &    12.734 &     0.425 &    15.971 &     0.390 \\  
 Cognitive &         . &         . &  -548.409 &     0.845 &         . &         . &   342.247 &     0.370 &         . &         . &   491.634 &     0.340 \\  
 NonCognitive &         . &         . &   563.416 &     0.170 &         . &         . &   190.481 &     0.390 &         . &         . &  -281.835 &     0.615 \\  
 Constant &  5531.763 &     0.045 &  6888.887 &     0.065 & 12519.805 &     0.030 & 17843.746 &     0.060 & 14798.421 &     0.045 & 22104.971 &     0.080 \\  
