--- a/output/abccare_endog_p_inc21y_smale.tex
+++ b/output/abccare_endog_p_inc21y_smale.tex
@@ -1,13 +1,13 @@
-% matrix: allp_inc21y_smale file: abccare_endog_p_inc21y_smale.tex  30 Sep 2016 12:10:31
+% matrix: allp_inc21y_smale file: abccare_endog_p_inc21y_smale.tex  30 Sep 2016 13:31:48
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
 R & 13127.756 &     0.010 & 11962.075 &     0.060 & 10021.009 &     0.095 &  9602.484 &     0.180 & 13462.431 &     0.235 & -2.80e+04 &     0.530 \\  
 Mother'sEducation &  -187.720 &     0.545 & -1574.216 &     0.760 &  -363.856 &     0.565 & -2034.141 &     0.690 &  2408.056 &     0.295 & 21124.332 &     0.225 \\  
-BaselineIQ &         . &         . &         . &         . &  -359.365 &     0.745 &   804.192 &     0.255 &   326.186 &     0.420 &  2999.628 &     0.185 \\  
+PIAT(5-7) &         . &         . &         . &         . &  -359.365 &     0.745 &   804.192 &     0.255 &   326.186 &     0.420 &  2999.628 &     0.185 \\  
 Education(30) &         . &         . &         . &         . &  -489.183 &     0.600 &   759.850 &     0.380 &  1089.530 &     0.435 & 13331.783 &     0.230 \\  
-LaborIncome(27) &         . &         . &         . &         . &    -0.074 &     0.565 &    -0.040 &     0.550 &    -0.944 &     0.785 &    -4.042 &     0.845 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &  -777.301 &     0.760 &   565.716 &     0.425 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.074 &     0.565 &    -0.040 &     0.550 &    -0.944 &     0.785 &    -4.042 &     0.845 \\  
+BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &  -777.301 &     0.760 &   565.716 &     0.425 \\  
 Cognitive &         . &         . & -1394.586 &     0.625 &         . &         . & -1.08e+04 &     0.860 &         . &         . & 41354.977 &     0.380 \\  
 NonCognitive &         . &         . & -1582.930 &     0.650 &         . &         . &   508.814 &     0.440 &         . &         . & -2.02e+04 &     0.750 \\  
 Constant & 23386.021 &     0.080 & 36548.277 &     0.110 & 65366.129 &     0.070 & -4.49e+04 &     0.660 & -2.07e+04 &     0.515 & -6.01e+05 &     0.795 \\  
