--- a/output/abccare_endog_si30y_inc_labor_sfemale.tex
+++ b/output/abccare_endog_si30y_inc_labor_sfemale.tex
@@ -1,13 +1,13 @@
-% matrix: allsi30y_inc_labor_sfemale file: abccare_endog_si30y_inc_labor_sfemale.tex  30 Sep 2016 12:11:07
+% matrix: allsi30y_inc_labor_sfemale file: abccare_endog_si30y_inc_labor_sfemale.tex  30 Sep 2016 13:32:29
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
 R &  1813.936 &     0.370 &  -142.893 &     0.515 & -6779.593 &     0.915 & -5823.283 &     0.890 & -1.07e+04 &     0.965 & -1.18e+04 &     0.950 \\  
 Mother'sEducation &  -362.030 &     0.565 & -1172.507 &     0.720 & -2284.401 &     0.915 & -2006.928 &     0.870 & -2566.533 &     0.875 & -2248.212 &     0.800 \\  
-BaselineIQ &         . &         . &         . &         . &   214.441 &     0.240 &   199.340 &     0.315 &   255.187 &     0.230 &    -1.569 &     0.500 \\  
+PIAT(5-7) &         . &         . &         . &         . &   214.441 &     0.240 &   199.340 &     0.315 &   255.187 &     0.230 &    -1.569 &     0.500 \\  
 Education(30) &         . &         . &         . &         . &  3558.591 &     0.015 &  4019.946 &     0.005 &  5934.033 &     0.005 &  7140.629 &     0.005 \\  
-LaborIncome(27) &         . &         . &         . &         . &     0.328 &     0.130 &     0.400 &     0.125 &     0.320 &     0.155 &     0.219 &     0.295 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &  -106.867 &     0.690 &  -138.059 &     0.725 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.328 &     0.130 &     0.400 &     0.125 &     0.320 &     0.155 &     0.219 &     0.295 \\  
+BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &  -106.867 &     0.690 &  -138.059 &     0.725 \\  
 Cognitive &         . &         . &  4268.597 &     0.055 &         . &         . & -1513.535 &     0.645 &         . &         . &  1103.300 &     0.385 \\  
 NonCognitive &         . &         . &  -733.528 &     0.565 &         . &         . &  3086.903 &     0.185 &         . &         . &   486.416 &     0.450 \\  
 Constant & 27597.588 &     0.095 & 34798.168 &     0.065 & -2.01e+04 &     0.770 & -2.87e+04 &     0.760 & -4.23e+04 &     0.895 & -3.21e+04 &     0.785 \\  
