--- a/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
@@ -1,13 +1,13 @@
-% matrix: allsi30y_inc_trans_pub_sfemale file: abccare_endog_si30y_inc_trans_pub_sfemale.tex  30 Sep 2016 12:11:50
+% matrix: allsi30y_inc_trans_pub_sfemale file: abccare_endog_si30y_inc_trans_pub_sfemale.tex  30 Sep 2016 13:33:13
 \begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
 R & -2198.921 &     0.930 & -1473.988 &     0.760 & -1179.620 &     0.740 & -1550.571 &     0.755 & -1533.370 &     0.720 & -2821.848 &     0.790 \\  
 Mother'sEducation &  -442.156 &     0.815 &  -426.850 &     0.755 &  -146.427 &     0.615 &    17.259 &     0.460 &  -140.163 &     0.575 &    53.883 &     0.480 \\  
-BaselineIQ &         . &         . &         . &         . &   -85.224 &     0.895 &  -208.398 &     0.915 &  -100.031 &     0.890 &  -238.510 &     0.890 \\  
+PIAT(5-7) &         . &         . &         . &         . &   -85.224 &     0.895 &  -208.398 &     0.915 &  -100.031 &     0.890 &  -238.510 &     0.890 \\  
 Education(30) &         . &         . &         . &         . &  -135.897 &     0.600 &   -34.820 &     0.525 &  -343.226 &     0.605 &    96.874 &     0.470 \\  
-LaborIncome(27) &         . &         . &         . &         . &    -0.138 &     0.955 &    -0.188 &     0.965 &    -0.105 &     0.870 &    -0.226 &     0.940 \\  
-HealthIndex(30) &         . &         . &         . &         . &         . &         . &         . &         . &   -80.770 &     0.865 &   -67.892 &     0.775 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.138 &     0.955 &    -0.188 &     0.965 &    -0.105 &     0.870 &    -0.226 &     0.940 \\  
+BMI(34) &         . &         . &         . &         . &         . &         . &         . &         . &   -80.770 &     0.865 &   -67.892 &     0.775 \\  
 Cognitive &         . &         . &  -793.186 &     0.860 &         . &         . &  1467.826 &     0.155 &         . &         . &  1514.372 &     0.200 \\  
 NonCognitive &         . &         . &   209.986 &     0.415 &         . &         . &  -524.800 &     0.695 &         . &         . & -1124.674 &     0.750 \\  
 Constant &  8910.982 &     0.050 &  8625.138 &     0.075 & 17177.744 &     0.035 & 27152.557 &     0.040 & 23908.488 &     0.035 & 31902.010 &     0.070 \\  
